Fixed the overflow

--- a/src/components/CourseHero/course-hero.css
+++ b/src/components/CourseHero/course-hero.css
@@ -22,6 +22,7 @@
 
 .courseHeroCustomBg {
   background-color: #EFF4FF;
+  max-width: 100%;
 }
 
 .courseHeroBadge {
